cart semi logic

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGO_URI = mongodb+srv://vladknowsbetter:Password123@campus-crave.6pcfo4v.mongodb.net/
+MONGO_URI = mongodb+srv://PoornaPragnyaH:Password123@auth.gtgvydb.mongodb.net/
